<resources>
    <string name="app_name">PhoneBook(testApp)</string>
    <string name="first_select">first select</string>
    <string name="second_select">second select</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="save">save</string>
    <string name="avatar">avatar</string>
    <string name="edit_avatar">edit_avatar</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="contact_delete">contact_delete</string>
    <string name="addContactGroup">addContactGroup</string>

    <string-array name="category">
        <item>Все контакты</item>
        <item>Друзья</item>
        <item>Коллеги</item>
        <item>Знакомые</item>
        <item>Сокурсники</item>
        <item>О программе</item>
    </string-array>
</resources>