<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.phonebooktestapp.detailui.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/normal_100"
            android:contentDescription="@string/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.025"
            app:srcCompat="@drawable/ic_baseline_add_a_photo_24">

        </ImageView>

        <ImageButton
            android:id="@+id/imageEdit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_background"
            android:contentDescription="@string/edit_avatar"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ExtraText">
            app:tint="@null"</ImageButton>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:text="@{String.valueOf(viewModel.selectedContact.name)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.706"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_100"
            android:hint="@string/hint_phone"
            android:text="@{String.valueOf(viewModel.selectedContact.phone)}"
            app:layout_constraintEnd_toEndOf="@+id/editTextName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextName"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
            app:layout_constraintVertical_bias="0.049">

            <RadioGroup
                android:id="@+id/radioButtonGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/all_contacts_radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Все контакты" />

                <RadioButton
                    android:id="@+id/friends_radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Друзья" />

                <RadioButton
                    android:id="@+id/colleagues_radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Коллеги" />

                <RadioButton
                    android:id="@+id/familiar_radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Знакомые" />

                <RadioButton
                    android:id="@+id/students_radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Сокурсники" />

            </RadioGroup>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:contentDescription="@string/contact_delete"
                android:onClick="@{() -> viewModel.deleteContact()}"
                app:layout_constraintEnd_toEndOf="@+id/radioButtonGroup"
                app:srcCompat="@drawable/ic_baseline_delete_forever_24"
                app:tint="@null"
                tools:layout_editor_absoluteX="280dp"
                tools:layout_editor_absoluteY="534dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>