<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.phonebooktestapp.ui.details.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraintView">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/contact_delete"
            android:onClick="@{() -> viewModel.deleteContact()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:srcCompat="@drawable/ic_baseline_delete_forever_24"
            app:tint="@null" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingDeleteGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/contact_delete"
            android:onClick="@{() -> viewModel.deleteGroup()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.501"
            app:srcCompat="@drawable/ic_baseline_delete_forever_24"
            app:tint="@null" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/normal_100"
            android:contentDescription="@string/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.025"
            app:srcCompat="@drawable/ic_baseline_add_a_photo_24">

        </ImageView>

        <ImageButton
            android:id="@+id/imageEdit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_background"
            android:contentDescription="@string/edit_avatar"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ExtraText">
            app:tint="@null"</ImageButton>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint_name"
            android:text="@{String.valueOf(viewModel.selectedContactsTable.name)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.813"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint_phone"
            android:text="@{String.valueOf(viewModel.selectedContactsTable.phone)}"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/editTextName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextName"
            app:layout_constraintTop_toBottomOf="@+id/editTextName"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.236">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingAddGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:contentDescription="@string/addContactGroup"
                app:layout_constraintEnd_toEndOf="@+id/radioButtonGroup"
                app:srcCompat="@drawable/ic_baseline_group_add_24"
                app:tint="@null"
                tools:layout_editor_absoluteX="280dp"
                tools:layout_editor_absoluteY="534dp" />

            <RadioGroup
                android:id="@+id/radioButtonGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/editGroupLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.045">

            <EditText
                android:id="@+id/edit_category"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-light"
                android:hint="add Group"
                android:inputType="textAutoComplete"
                android:minHeight="16dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonSaveGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="SAVE" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>